--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,13 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/api"
+      "src": "^/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/",
+      "dest": "/index.js"
     }
   ]
+  
 }
