--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "node api/index",
+    "start": "node index",
     "dev": "nodemon index"
     
   },
